[workspace]
members = [
	"lego-powered-up",
	"pu-util",
	"lpu-macros",

	"examples/*",
]
default-members = ["pu-util", "lego-powered-up"]

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
debug = true
