[package]
name = "gui"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_egui = "0.4"
lego-powered-up = { path = "../lego-powered-up" }
rhai = { version = "0.20", features = ["serde", "f32_float", "sync", "no_closure"] }
serde = { version = "1.0", features = ["derive"] }
