[package]
name = "lego-powered-up"
version = "0.3.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/bricks-rs/lego-powered-up"
description = "Control Lego PoweredUp hubs and devices"
readme = "../README.md"


# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bitflags = "2.3.1"
btleplug = "0.10"
futures = "0.3"
#futures-util = "0.3"
lazy_static = "1"
log = "0.4"
lpu-macros = "0.1"
num-derive = "0.3"
num-traits = "0.2"
thiserror = "1"
#tokio = { version = "1", features = ["sync"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
uuid = "1"

[dev-dependencies]
env_logger = "0.10"
