[package]
name = "lego-powered-up"
version = "0.3.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/bricks-rs/lego-powered-up"
description = "Control Lego PoweredUp hubs and devices"
readme = "../README.md"


# See more keys and their definitions at
# https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# std
btleplug = "0.10"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"
num-derive = "0.3"
thiserror = "1"

# nostd
async-trait = "0.1"
futures = { version = "0.3", default-features = false }
lazy_static = "1"
lpu-macros = "0.1"
num-traits = "0.2"
uuid = "1"

[dev-dependencies]
env_logger = "0.10"
