[package]
name = "lpu-macros"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2021"
license = "MPL-2.0"
repository = "https://github.com/sciguy16/lego-powered-up"
description = "Macros used for lego-powered-up"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0"
quote = "1.0"
