[package]
name = "pu-util"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
env_logger = "0.9"
lego-powered-up = { path="../lego-powered-up" }
log = "0.4"
