[package]
name = "pu-util"
version = "0.1.0"
authors = ["David Young <david@thedavidyoung.co.uk>"]
edition = "2021"
license = "MPL-2"
repository = "https://github.com/sciguy16/lego-powered-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3", features = ["cargo"] }
env_logger = "0.9"
lego-powered-up = { path="../lego-powered-up" }
log = "0.4"
