[package]
name = "device_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lego-powered-up = { path = "../../lego-powered-up" }
text_io = "0.1.12"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
