[package]
name = "remote-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lego-powered-up = { path = "../../lego-powered-up" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

anyhow = "1.0"


# needed to crosscompile on WSL
dbus = { version = "0.9.7", features = ["vendored"], optional = true }

[features]
wslcross = ["dep:dbus"]
