[package]
name = "run-motors"
version = "0.1.0"
edition = "2021"
license = "MPL-2"
repository= "https://github.com/sciguy16/lego-powered-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lego-powered-up = { path = "../../lego-powered-up" }