[package]
name = "scan"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
publish = false
repository= "https://github.com/bricks-rs/lego-powered-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lego-powered-up = { path = "../../lego-powered-up" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
