[package]
name = "tank-remote"
version = "0.1.0"
edition = "2018"
license = "CC0-1.0"
publish = false
repository= "https://github.com/sciguy16/lego-powered-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_engine = "2.2"
eyre = "0.6"
lego-powered-up = { path = "../../lego-powered-up" }