[package]
name = "tank-remote"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
publish = false
repository= "https://github.com/bricks-rs/lego-powered-up"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_engine = "2.2"
eyre = "0.6"
lego-powered-up = { path = "../../lego-powered-up" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }


# needed to crosscompile on WSL
dbus = {version = "0.9.7", features = ["vendored"], optional = true}

[features]
wslcross = ["dep:dbus"]
