[package]
name = "all-sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lego-powered-up = { path = "../../lego-powered-up" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
btleplug = "0.10"
futures = "0.3"

#text_io = "0.1.12"
anyhow = "1.0"



# needed to crosscompile on WSL
dbus = {version = "0.9.7", features = ["vendored"], optional = true}

[features]
wslcross = ["dep:dbus"]
